assets/css/style.css
/* @media only screen and (min-width: 600px) {
  main {
    display: flex;
  }
} */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Courgette", cursive;
}
body {
  background-image: url(../images/pexels-julie-aagaard-2097090.jpg);
  background-size: 100%;
  background-repeat: no-repeat;
  padding: 2%;
}
html {
  height: 100vh;
}
.container {
  display: inline;
  column-gap: 30px;
}

.food-form,
.drink-form {
  background-color: rgba(0, 0, 255, 0.25);
  border-radius: 5px;
  padding: 2%;
  margin: 1%;
}

.hide {
  display: none;
}

.dropdown {
  margin: 1%;
  width: 100%;
}

.dropdown-toggle {
  width: 100%;
}

.dropdown-menu {
  width: 100%;
}

.dropdown-item {
  width: 100%;
}

.formSubmit {
  display: flex;
  justify-content: center;
}

.submitBtn {
  width: 90%;
  margin: 1%;
}

.foodSearchResultsBody {
  background-image: url(../images/pexels-daria-shevtsova-1095550.jpg);
  background-size: 100%;
  background-repeat: no-repeat;
  padding: 2%;
}

.searchResultsMain {
  display: flex;
  flex-direction: row;
  column-gap: 30px;
  justify-content: center;
}

.food-result {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
}

.resultsBtn {
  margin-top: 2%;
}

